# ChangeLog for games-arcade/moleinvasion
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-arcade/moleinvasion/ChangeLog,v 1.6 2011/06/14 20:18:03 tupone Exp $

  14 Jun 2011; Tupone Alfredo <tupone@gentoo.org> moleinvasion-0.4-r1.ebuild,
  +files/moleinvasion-0.4-underlink.patch:
  Fix underlink. Bug #368931 by Diego Elio Pettenò

  04 Jan 2010; Markus Meier <maekke@gentoo.org> moleinvasion-0.4-r1.ebuild:
  x86 stable, bug #297869

  28 Dec 2009; Richard Freeman <rich0@gentoo.org>
  moleinvasion-0.4-r1.ebuild:
  amd64 stable - 297869

*moleinvasion-0.4-r1 (22 Nov 2009)

  22 Nov 2009; Tristan Heaven <nyhm@gentoo.org> +moleinvasion-0.4-r1.ebuild,
  +files/moleinvasion-0.4-opengl.patch:
  Fix possible segfault

  19 Sep 2009; Markus Meier <maekke@gentoo.org> moleinvasion-0.4.ebuild:
  amd64/x86 stable, bug #285405

*moleinvasion-0.4 (31 Jul 2009)

  31 Jul 2009; Tristan Heaven <nyhm@gentoo.org> +moleinvasion-0.4.ebuild,
  +metadata.xml:
  Initial commit
